<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FAFAFA">

                <TextView
                    android:id="@+id/toolbar_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/allerta"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    tools:text="jayjaybuick" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_margin="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stats_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/profile_picture"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/profile_picture">

            <TextView
                android:id="@+id/posts_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/posts_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/guideline_1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/posts_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts_stat_label"
                android:textColor="#989898"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="@id/guideline_1"
                app:layout_constraintTop_toBottomOf="@+id/posts_stat" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.333" />

            <TextView
                android:id="@+id/followers_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/followers_label"
                app:layout_constraintLeft_toLeftOf="@id/guideline_1"
                app:layout_constraintRight_toRightOf="@id/guideline_2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/followers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers_stat_label"
                android:textColor="#989898"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/guideline_1"
                app:layout_constraintRight_toRightOf="@id/guideline_2"
                app:layout_constraintTop_toBottomOf="@+id/followers_stat" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.666" />

            <TextView
                android:id="@+id/following_stat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/following_label"
                app:layout_constraintLeft_toLeftOf="@id/guideline_2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/following_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following_stat_label"
                android:textColor="#989898"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/guideline_2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/followers_stat" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="12dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_picture" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#F4F4F4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/first_name" />

        <LinearLayout
            android:id="@+id/posted_images_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>